--- a/OPENLIST/index.html
+++ b/OPENLIST/index.html
@@ -15,7 +15,7 @@
     <div class="content-wrapper">
     <div class="container">
         <div class="namelist"><h2>OPEN LIST</h2>
-        <div class="compname"><h1>By vyntra.life</h1></div>
+        <div class="compname"><h1>By Vyntra.life</h1></div>
     
         </div>
         <br>
@@ -31,14 +31,15 @@
     </div>
 </div>
 </div>
+<br><hr>    <br>
 <footer class="mainfootbox">
     <p class="footerbox">
-        Copyright &#169; vyntra.life 2025
+        Copyright &#169;Vyntra.life 2025
         
     </p>
 </footer>
 
-    <script src="index.js">
+    <script src="main.js">
     </script>
 </body>
 
