--- a/OPENLIST/index.html
+++ b/OPENLIST/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>OpenList</title>
     <link rel="stylesheet" href="main.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1068304390608492"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
