--- a/REVEAL/index.html
+++ b/REVEAL/index.html
@@ -731,7 +731,7 @@ body {
       <button class="btn">Lets Begin</button>
     </div>
     <div class="hero-image">
-      <img src="bgphoto.png" alt="Student" />
+      <img src="https://i.ibb.co/vvqYsGqB/Untitled-design-6.png" alt="Student" />
     </div>
   </section>
   <main>
